--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
 				<div class="footer" id="footer">
 					<ul>
 						<h2>Network</h2>
-						<a href="https://www.instagram.com/exdesy.design/"><img src="/img/instagram.png" alt="Instagram"> Instagram</p></a>
-						<a href="https://github.com/eXdesy"><img src="/img/github.png" alt="GiHub"> GiHub</p></a>
-						<a href="https://www.behance.net/exdesydesign"><img src="/img/behance.png" alt="Behance"> Behance</p></a>
+						<a href="https://www.instagram.com/exdesy.design/"><img src="img/instagram.png" alt="Instagram"> Instagram</p></a>
+						<a href="https://github.com/eXdesy"><img src="img/github.png" alt="GiHub"> GiHub</p></a>
+						<a href="https://www.behance.net/exdesydesign"><img src="img/behance.png" alt="Behance"> Behance</p></a>
 					</ul>
 					<ul>
 						<h2>Contact</h2>
